# Cpp-Starter-Project

./: CMakeLists.txt  main.cpp
cmake/: findvJoyInterface
include/: Logger.h  SerialPort.h
src/: Logger.cpp  SerialPort.cpp
src/main/: Logger.cpp  SerialPort.cpp
